...
    }

}

extension AppDelegate: SPDLocationAuthorizationDelegate {
    func authorizationDenied(for locationAuthorization: SPDLocationAuthorization) {
        let alertController = UIAlertController(title: "Permission Denied", message: "Grant access to your location", preferredStyle: .alert)
        let okAction = UIAlertAction(title: "", style: .default, handler: nil)
        alertController.addAction(okAction)
        window?.rootViewController?.present(alertController, animated: true, completion: nil)
    }
}

...
