...
        alertController.addTextField { [weak self] (textField) in
            textField.keyboardType = .numberPad
            if let maxSpeed = self?.speedChecker.maximumSpeed {
                textField.text = String(format: "%.0f", maxSpeed.asKMH)
            }
        }
        let okAction = UIAlertAction(title: "OK", style: .default) { [weak self] (_) in
            guard let text = alertController.textFields?.first?.text else { return }
            guard let maxSpeed = Double(text) else { return }
            
            self?.speedChecker.maximumSpeed = maxSpeed.asMPS
        }
        
...
